--- a/requirements.txt
+++ b/requirements.txt
@@ -10,6 +10,7 @@ contourpy==1.3.0
 cryptography==43.0.1
 cycler==0.12.1
 dbus-python==1.3.2
+Faker==32.1.0
 Flask==3.0.3
 fonttools==4.54.1
 greenlet==3.1.1
